# celeste-video-generation

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  example.py  pyproject.toml
src/celeste_video_generation/: __init__.py  mapping.py
src/celeste_video_generation/providers/: google.py  replicate.py
